--- a/index.html
+++ b/index.html
@@ -14,5 +14,12 @@
 </div>
 </div>
 <hr width="100%" height"50%">
+<div class="description">
+  <div class="col-md-12">
+    <p>Pig is a simple dice game first described in print by John Scarne in
+       1945.[1] As with many games of folk origin, Pig is played with many rule
+        variations. Commercial variants of Pig include Pass the Pigs, Pig Dice,[2]
+         and Skunk. Pig is commonly used by mathematics teachers to teach probability
+          concepts. -wikipedia.
   </body>
 </html>
