--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 <div class="description">
   <div class="col-md-12">
     <p>Pig is a simple dice game first described in print by John Scarne in
-       1945.[1] As with many games of folk origin, Pig is played with many rule
-        variations. Commercial variants of Pig include Pass the Pigs, Pig Dice,[2]
-         and Skunk. Pig is commonly used by mathematics teachers to teach probability
-          concepts. -wikipedia.
+       1945.[1] . -wikipedia</p>
+        </div>
+      </div>
+      <hr width="100%" height"50%">
+
   </body>
 </html>
