--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
         </div>
       </div>
       <hr width="100%" height"50%">
-
+      <div class="rules">
+<div class="col-md-12">
+  <h3>rules:</h3>
+  <ul>
+    <li>if a player gets a 1 their score is xero and it becomes the next persons turn.</l1>
+      <l1>apart from 1 all the numbers are added up to the score<l1>
+        <li>warning!!!!! its addictive</l1>
   </body>
 </html>
