add change to rules section

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
       </div>
       <hr width="100%" height"50%">
       <div class="rules">
-<div class="col-md-12">
-  <h3>rules:</h3>
+<div class="col-md-12""row">
+  <h3>Rules:</h3>
   <ul>
-    <li>if a player gets a 1 their score is xero and it becomes the next persons turn.</l1>
-      <l1>apart from 1 all the numbers are added up to the score<l1>
+    <li>if a player gets a 1 their score is xero and it becomes the next persons turn</li>
+      <li>apart from 1 all the numbers are added up to the score</i1>
         <li>warning!!!!! its addictive</l1>
+        </ul>
+      </div>
+      <hr width="50%" height"50%">
   </body>
 </html>
