add breaks to the rules

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <h3>Rules:</h3>
     <hr width="50%" height"50%">
   <ul>
-    <li>if a player gets a 1 their score is xero and it becomes the next persons turn</li>
-      <li>apart from 1 all the numbers are added up to the score</i1>
-        <li>warning!!!!! its addictive</l1>
+    <li>1. if a player gets a 1 their score is xero and it becomes the next persons turn</li><br>
+      <li>2. apart from 1 all the numbers are added up to the score</li><br>
+        <li>3. warning!!!!! its addictive</l1>
         </ul>
       </div>
       <hr width="50%" height"50%">
