add the p on yhe header classs

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>pig-dice</title>
   </head>
   <body>
-    
+
 <div class="header">
   <div class="col-md-12">
 <h1>pig-dice<h1>
+      <hr width="50%">
+  <p>scroll down to have some fun!!!!</p>
 </div>
 </div>
 <hr width="100%" height"50%">
-<
+<br>
+<br>
       <div class="rules">
 
 <div class="col-md-12""row">
@@ -28,5 +31,9 @@
         </ul>
       </div>
       <hr width="50%" height"50%">
+
+      <section id="user">
+
+
   </body>
 </html>
