--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <label for="player1">Name</label>
                     <input type="text" class="form-control" id="player1" placeholder="Player 1">
                   </div>
-                  
+
                   <div class="form-group">
                     <label for="player2">Name</label>
                     <input type="text" class="form-control" id="player2" placeholder="Player 2">
@@ -51,6 +51,13 @@
                   <button class="btn btn-success" id="player" type="submit">Enter Game</button>
                 </form>
                </div>
+               <div class="col-md-6" id="roll">
+        <div class="col-md-3" id="player1-roll">
+          <h3 id="player1"></h3>
+          <button class="btn btn-primary" id="die1">Roll!</button>
+          <button class="btn btn-default" id="hold1">Hold!</button>
+        </div>
+
               </div>
             </div>
           </div>
