--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <meta charset="utf-8">
+    <script src="js/jquery-3.2.1.js"></script>
     <title>pig-dice</title>
   </head>
   <body>
@@ -57,11 +57,38 @@
           <button class="btn btn-primary" id="die1">Roll!</button>
           <button class="btn btn-default" id="hold1">Hold!</button>
         </div>
-
+        <div class="col-md-3" id="player2-roll">
+                  <h3 id="player2"></h3>
+                  <button class="btn btn-warning" id="die2">Roll!</button>
+                  <button class="btn btn-danger" id="hold2">Hold!</button>
+                </div>
+              </div>
               </div>
             </div>
           </div>
+          <div class="container">
+                  <div class="row" id="display">
+                    <div class="col-md-4">
+                      <div class="display">
+                        <h1>Score</h1>
+                        <h2 class="score" id="score1">0</h2>
+                      </div>
+                    </div>
 
+                    <div class="col-md-4" id="die-count">
+                      <h4>Die:</h4>
+                      <h2 id="die-count">0</h2>
+                    </div>
 
+                    <div class="col-md-4">
+                      <div class="display">
+                        <h1>Score</h1>
+                        <h2 class="score" id="score2">0</h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+<script src="js/scripts.js"></script>
   </body>
 </html>
