--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <body>
 
 <div class="header">
-  <div class="col-md-12">
-<h1>pig-dice<h1>
-      <hr width="50%">
-  <p>scroll down to have some fun!!!!</p>
-</div>
+
+  <p>welcome to pig dice!!!</p>
+<h4>scroll down</h4>
+
 </div>
 <hr width="100%" height"50%">
 <br>
