add some correction

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <div class="header">
 
   <p>welcome to pig dice!!!</p>
-<h4>scroll down</h4>
+  <h5>Game time!<h5>
+<h4>scroll down and lets have some fun</h4>
 
 </div>
 <hr width="100%" height"50%">
