--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </div>
 
                     <div class="col-md-4" id="die-count">
-                      <h4>Die:</h4>
+                      <h4>Dice roll:</h4>
                       <h2 id="die-count">0</h2>
                     </div>
 
